--- a/draft-scenarios/clash/secret_bomb_stash.tex
+++ b/draft-scenarios/clash/secret_bomb_stash.tex
@@ -42,7 +42,7 @@ Before the start of the Scenario instead of normal Search (2) Spells twice, each
 \subsection*{\MakeUppercase{Map Setup}}
 \begin{itemize}
   \item Center (VI--VII) Map Tile \textbf{must} contain the Grail Field.
-  \item Every near tile must contain an Obelisk (if that's not possible, treat Witch Huts as Obelisks).
+  \item Every near Tile must contain an Obelisk (if that's not possible, treat Witch Huts as Obelisks).
   \item Take the following Map Tiles and arrange them as shown in the Scenario map layout ($P$ stands for the number of players):
 \end{itemize}
 
@@ -86,14 +86,14 @@ During this Scenario:
 
 Center Tile:
 \begin{itemize}
-  \item On Center Tile, Player can freely move through the neutral battles level VI, as if they had basic pathfinding effect (they can choose to fight there, but don't have to, and can't end turn there without resolving the battle).
-  \item Level VII combat is ignored. The Hero that visits the grail space gets the bomb(grail token). Put the grail token under bomb carrying Hero's miniature.
+  \item On Center Tile, Player can freely move through the neutral battles Level VI, as if they had basic pathfinding effect (they can choose to fight there, but don't have to, and can't end turn there without resolving the battle).
+  \item Level VII combat is ignored. The Hero that visits the Grail space gets the bomb(grail token). Put the Grail token under bomb carrying Hero's miniature.
 \end{itemize}
 
 Bomb:
 
 \begin{itemize}
-  \item Bomb carrier cannot gain extra \svg{movement} from any Card/Town Building/Map Location or any other effects.
+  \item Bomb carrier cannot gain extra \svgeven{movement} from any Card/Town Building/Map Location or any other effects.
   \item If your other Hero or allied Hero is adjacent to bomb carrier you can transfer the bomb to them.
   \item If defeated, the bomb is put on the space the Hero was defeated on, and can be claimed by any other Hero by visiting that Field.
   \item If held by main Hero:
