Grammar and clarity review

--- a/draft-scenarios/clash/secret_bomb_stash.tex
+++ b/draft-scenarios/clash/secret_bomb_stash.tex
@@ -7,12 +7,12 @@
 
 \textbf{Source:} \href{https://discord.com/channels/740870068178649108/1278750250722525203/1278750250722525203}{Archon Studios Discord}
 
-\textit{There are rumors of the abandoned bomb stash in this area.
+\textit{Rumors speak of an abandoned bomb stash in this area.
 Use it to destroy your opponents.
-But be careful, because your enemies might be one step ahead of you.}
+But be careful -- your enemies might already be one step ahead.}
 
 \subsection*{\MakeUppercase{Scenario Length}}
-This Scenario is played over 8 Rounds, with possible 4 additional tie-breaking ones.
+This Scenario is played over 8 Rounds, with up to 4 additional tie-breaking Rounds if needed.
 
 \subsection*{\MakeUppercase{Player Setup}}
 \textbf{Player Count:} 2--4, 6 Player FFA or 2vs2, 2vs2vs2, 3vs3 Alliance
@@ -23,27 +23,27 @@ This Scenario is played over 8 Rounds, with possible 4 additional tie-breaking o
 
 \textbf{Starting Units:}
 \begin{itemize}
-  \item a Few of two \svgunit{bronze} Units with the lowest Recruitment cost
-  \item a Few \svgunit{silver} Units with the lowest Recruitment cost
+  \item A Few of two \svgunit{bronze} Units with the lowest Recruitment cost
+  \item A Few \svgunit{silver} Units with the lowest Recruitment cost
 \end{itemize}
 
 \textbf{Town Buildings:} \svgunit{bronze} Dwelling, \svgunit{silver} Dwelling, Citadel, Mage Guild
 
 \textbf{Map Tile Pool:} None
 
-\textbf{Additional Bonus} (replaces regular Starting Bonus):
+\textbf{Additional Bonus} (replaces Starting Bonus):
 
 \begin{itemize}
-  \item Search (4) the Artifact Deck and shuffle the Card into your M\&M Deck
+  \item Search (4) the Artifact Deck and shuffle the Card into your M\&M Deck.
 \end{itemize}
-Before the start of the Scenario instead of normal Search (2) Spells twice, each player performs Search (4) Spells once.
-\textbf{Players start at Level III} (before the start of the Scenario instead of normal Search (2) Abilities twice, each player performs Search (4) Abilities once).
+Before the start of the Scenario, instead of performing the usual Search (2) Spells twice, each player performs a Search (4) Spells once.
+\textbf{Players start at Level III} (before the start of the Scenario, instead of the usual Search (2) Abilities twice, each player performs a Search (4) Abilities once).
 
 \subsection*{\MakeUppercase{Map Setup}}
 \begin{itemize}
   \item Center (VI--VII) Map Tile \textbf{must} contain the Grail Field.
-  \item Every near Tile must contain an Obelisk (if that's not possible, treat Witch Huts as Obelisks).
-  \item Take the following Map Tiles and arrange them as shown in the Scenario map layout ($P$ stands for the number of players):
+  \item Each near Tile must contain an Obelisk (if that's not possible, treat Witch Huts as Obelisks).
+  \item Take the following Map Tiles and arrange them as shown in the Scenario map layout ($\boldsymbol{P}$ stands for the number of players):
 \end{itemize}
 
 \textbf{For a 2- and 4-player Scenario:}
@@ -61,10 +61,10 @@ Before the start of the Scenario instead of normal Search (2) Spells twice, each
 \end{itemize}
 
 \subsection*{\MakeUppercase{Objective}}
-Deposit bombs (Grail) into enemy Town.
+Deposit bombs (Grail) into the enemy Town.
 
 \subsection*{\MakeUppercase{Defeat Conditions}}
-Players loose if they don't score enough VPs in the designated amount of turns.
+Players lose if they don't score enough VPs within the designated number of Rurns.
 
 \subsection*{\MakeUppercase{Timed Events}}
 
@@ -80,40 +80,42 @@ Players loose if they don't score enough VPs in the designated amount of turns.
 During this Scenario:
 
 \begin{itemize}
-  \item Heroes cannot attack other players' Towns without carrying the bomb.
-  \item Heroes cannot attack bomb carrier from their Starting Town Field.
+  \item Heroes cannot attack other players' Towns unless they are carrying the bomb.
+  \item Heroes cannot attack the bomb carrier from their Starting Town Field.
 \end{itemize}
 
 Center Tile:
+
 \begin{itemize}
-  \item On Center Tile, Player can freely move through the neutral battles Level VI, as if they had basic pathfinding effect (they can choose to fight there, but don't have to, and can't end turn there without resolving the battle).
-  \item Level VII combat is ignored. The Hero that visits the Grail space gets the bomb(grail token). Put the Grail token under bomb carrying Hero's miniature.
+  \item On the Center Tile, players can freely move through neutral combats of Level VI, as if they had the basic Pathfinding Ability (they can choose to fight there but don't have to, and cannot end their turn there without resolving the combat).
+  \item Level VII combat is ignored. The Hero that reaches the Grail space receives the bomb (Grail token). Place the Grail token under the bomb-carrying Hero's miniature.
 \end{itemize}
 
-Bomb:
+The Bomb:
 
 \begin{itemize}
-  \item Bomb carrier cannot gain extra \svgeven{movement} from any Card/Town Building/Map Location or any other effects.
-  \item If your other Hero or allied Hero is adjacent to bomb carrier you can transfer the bomb to them.
-  \item If defeated, the bomb is put on the space the Hero was defeated on, and can be claimed by any other Hero by visiting that Field.
-  \item If held by main Hero:
+  \item The bomb carrier cannot gain extra \svgeven{movement} from any Card, Town Building, Map Location, or any other effect.
+  \item If your other Hero or an allied Hero is adjacent to the bomb carrier, you can transfer the bomb to them.
+  \item If defeated, the bomb is placed on the space where the Hero was defeated and can be claimed by any other Hero by visiting that Field.
+  \item If held by the Main Hero:
   \begin{itemize}
-    \item If defeated, the Hero does not have to pay their opponent gold, nor do they gain \svg{morale_negative}
+    \item If defeated, the Hero does not have to pay their opponent gold, nor do they gain \svg{morale_negative}.
   \end{itemize}
   \item If held by a Secondary Hero:
   \begin{itemize}
-    \item If defeated, the Hero is moved to Town instead of being removed.
-    \item The Hero can use M\&M Deck during battle.
+    \item If defeated, the Hero is moved to the Town instead of being removed.
+    \item The Hero can use their M\&M Deck during combat.
   \end{itemize}
 \end{itemize}
 
 Obelisks:
+
 \begin{itemize}
-  \item When first flagged, that Hero gains +1 \svgeven{movement}
-  \item On each visit (including first) player can choose to either:
+  \item When first flagged, the Hero gains +1 \svgeven{movement}.
+  \item On each visit (including the first), the player can choose to either:
   \begin{itemize}
-    \item Move the visiting Hero to any other Obelisk already flagged by you (if said Obelisk is occupied by another Hero, your Hero cannot move there).
-    \item If the Hero carries the bomb, transfer the bomb to your other Hero (or any of the allied Heroes).
+    \item Move the visiting Hero to any other Obelisk already flagged by you (if that Obelisk is occupied by another Hero, your Hero cannot move there).
+    \item If the Hero carries the bomb, transfer the bomb to your other Hero (or any allied Heroes).
   \end{itemize}
 \end{itemize}
 
