Add VPs clarifications

--- a/draft-scenarios/clash/secret_bomb_stash.tex
+++ b/draft-scenarios/clash/secret_bomb_stash.tex
@@ -60,8 +60,16 @@ Before the start of the Scenario, instead of performing the usual Search (2) Spe
   \item 1 × Center (VI--VII) Map Tile
 \end{itemize}
 
-\subsection*{\MakeUppercase{Objective}}
-Deposit bombs (Grail) into the enemy Town.
+\subsection*{\MakeUppercase{Victory Conditions}}
+
+Deposit bombs (Grail) into the enemy Town to score Victory Points (VPs).
+The game lasts for 8 Rounds:
+\begin{itemize}
+  \item A player wins when they score 3 VPs. The scenario ends immediately after the third bomb is deposited by any single player.
+  \item If no one scores 3 VPs by the end of the 8th Round, the player with the most VPs wins the scenario.
+  \item If VPs are tied, the scenario goes into sudden death. The first player to score a VP during the next 4 Rounds (9--12) wins the Scenario.
+  \item In any other situation, the game ends in a tie between the players with the most VPs.
+\end{itemize}
 
 \subsection*{\MakeUppercase{Defeat Conditions}}
 Players lose if they don't score enough VPs within the designated number of Rurns.
@@ -84,14 +92,14 @@ During this Scenario:
   \item Heroes cannot attack the bomb carrier from their Starting Town Field.
 \end{itemize}
 
-Center Tile:
+\textbf{Center Tile:}
 
 \begin{itemize}
   \item On the Center Tile, players can freely move through neutral combats of Level VI, as if they had the basic Pathfinding Ability (they can choose to fight there but don't have to, and cannot end their turn there without resolving the combat).
   \item Level VII combat is ignored. The Hero that reaches the Grail space receives the bomb (Grail token). Place the Grail token under the bomb-carrying Hero's miniature.
 \end{itemize}
 
-The Bomb:
+\textbf{The Bomb:}
 
 \begin{itemize}
   \item The bomb carrier cannot gain extra \svgeven{movement} from any Card, Town Building, Map Location, or any other effect.
@@ -108,7 +116,7 @@ The Bomb:
   \end{itemize}
 \end{itemize}
 
-Obelisks:
+\textbf{Obelisks:}
 
 \begin{itemize}
   \item When first flagged, the Hero gains +1 \svgeven{movement}.
@@ -118,6 +126,16 @@ Obelisks:
     \item If the Hero carries the bomb, transfer the bomb to your other Hero (or any allied Heroes).
   \end{itemize}
 \end{itemize}
+
+\textbf{Scoring Victory Points (VP):}
+
+Player gets 1 VP after winning a siege/entering enemy town while carrying the bomb.
+\begin{itemize}
+  \item After such event, the victorious hero gets moved back to their town, and the Grail token is put back on the grail space in the center (if any hero stands on that field when that happens they immediately become the bomb carrier).
+  \item The defending player does not lose control over their town after losing the siege.
+\end{itemize}
+
+You can mark VP by collecting Faction Cubes of your opponent's color or a color that is not used by any player.
 
 \end{multicols}
 
