Include missing information

--- a/draft-scenarios/clash/secret_bomb_stash.tex
+++ b/draft-scenarios/clash/secret_bomb_stash.tex
@@ -41,8 +41,8 @@ Before the start of the Scenario, instead of performing the usual Search (2) Spe
 
 \subsection*{\MakeUppercase{Map Setup}}
 \begin{itemize}
-  \item Center (VI--VII) Map Tile \textbf{must} contain the Grail Field.
-  \item Each near Tile must contain an Obelisk (if that's not possible, treat Witch Huts as Obelisks).
+  \item Center (VI--VII) Map Tile \textbf{must contain the Grail Field}.
+  \item Each Near Tile \textbf{must contain an Obelisk} (if that's not possible, treat Witch Huts as Obelisks).
   \item Take the following Map Tiles and arrange them as shown in the Scenario map layout ($\boldsymbol{P}$ stands for the number of players):
 \end{itemize}
 
@@ -65,9 +65,10 @@ Before the start of the Scenario, instead of performing the usual Search (2) Spe
 Deposit bombs (Grail) into the enemy Town to score Victory Points (VPs).
 The game lasts for 8 Rounds:
 \begin{itemize}
-  \item A player wins when they score 3 VPs. The scenario ends immediately after the third bomb is deposited by any single player.
-  \item If no one scores 3 VPs by the end of the 8th Round, the player with the most VPs wins the scenario.
-  \item If VPs are tied, the scenario goes into sudden death. The first player to score a VP during the next 4 Rounds (9--12) wins the Scenario.
+  \item A player wins when they score 3 VPs. The Scenario ends immediately after a single player deposits their third bomb.
+  \item If no one scores 3 VPs by the end of the 8th Round, the player with the most VPs wins the Scenario.
+  \item If VPs are tied, the Scenario goes into sudden death. The first player to score a VP during the next 4 Rounds (9--12) wins the Scenario.
+  \newpage
   \item In any other situation, the game ends in a tie between the players with the most VPs.
 \end{itemize}
 
@@ -80,8 +81,6 @@ Players lose if they don't score enough VPs within the designated number of Rurn
 \begin{itemize}
   \item Each Hero gains +1 \svgeven{movement}, except for the current bomb carrier.
 \end{itemize}
-
-\newpage
 
 \subsection*{\MakeUppercase{Additional Rules}}
 
@@ -127,32 +126,28 @@ During this Scenario:
   \end{itemize}
 \end{itemize}
 
-\textbf{Scoring Victory Points (VP):}
+\textbf{Scoring Victory Points (VPs):}
 
-Player gets 1 VP after winning a siege/entering enemy town while carrying the bomb.
+A player earns 1 VP after winning a siege or entering the enemy Town while carrying the bomb.
 \begin{itemize}
-  \item After such event, the victorious hero gets moved back to their town, and the Grail token is put back on the grail space in the center (if any hero stands on that field when that happens they immediately become the bomb carrier).
-  \item The defending player does not lose control over their town after losing the siege.
+  \item After such an event, the victorious Hero is moved back to their own Town, and the Grail token is returned to the Grail space in the center. If any Hero is standing on that Field when the Grail is placed, they immediately become the bomb carrier.
+  \item The defending player does not lose control of their Town after losing the siege.
 \end{itemize}
 
-You can mark VP by collecting Faction Cubes of your opponent's color or a color that is not used by any player.
+You can track VPs by collecting Faction Cubes of your opponent's color or using a color not in use by any player.
 
 \end{multicols}
-
-\begin{tikzpicture}[overlay]
-  \centering
-  \node at (4.5, -4) {\includegraphics[scale=0.2]{\maps/secret-bomb-stash-2p.png}};
-  \node at (4.5, -8) {\footnotesize{\textbf{\MakeUppercase{2-PLAYER SCENARIO}}}};
-  \node at (14, -4) {\includegraphics[scale=0.2]{\maps/secret-bomb-stash-3p.png}};
-  \node at (14, -9) {\footnotesize{\textbf{\MakeUppercase{3-PLAYER SCENARIO}}}};
-\end{tikzpicture}
 
 \newpage
 
 \begin{tikzpicture}[overlay]
   \centering
-  \node at (4.5, -5) {\includegraphics[scale=0.25]{\maps/secret-bomb-stash-4p.png}};
-  \node at (6, -10) {\footnotesize{\textbf{\MakeUppercase{4-PLAYER SCENARIO}}}};
-  \node at (12.1, -16.5) {\includegraphics[scale=0.25]{\maps/secret-bomb-stash-6p.png}};
-  \node at (12.1, -23) {\footnotesize{\textbf{\MakeUppercase{6-PLAYER SCENARIO}}}};
+  \node at (4.5, -4) {\includegraphics[scale=0.2]{\maps/secret-bomb-stash-2p.png}};
+  \node at (4.5, -8) {\footnotesize{\textbf{\MakeUppercase{2-PLAYER SCENARIO}}}};
+  \node at (13.5, -4) {\includegraphics[scale=0.2]{\maps/secret-bomb-stash-3p.png}};
+  \node at (13.5, -9) {\footnotesize{\textbf{\MakeUppercase{3-PLAYER SCENARIO}}}};
+  \node at (4, -17) {\includegraphics[scale=0.2]{\maps/secret-bomb-stash-4p.png}};
+  \node at (5.5, -21.5) {\footnotesize{\textbf{\MakeUppercase{4-PLAYER SCENARIO}}}};
+  \node at (13, -16) {\includegraphics[scale=0.2]{\maps/secret-bomb-stash-6p.png}};
+  \node at (13, -21.5) {\footnotesize{\textbf{\MakeUppercase{6-PLAYER SCENARIO}}}};
 \end{tikzpicture}
