--- a/draft-scenarios/clash/secret_bomb_stash.tex
+++ b/draft-scenarios/clash/secret_bomb_stash.tex
@@ -106,12 +106,12 @@ During this Scenario:
   \item If defeated, the bomb is placed on the space where the Hero was defeated and can be claimed by any other Hero by visiting that Field.
   \item If held by the Main Hero:
   \begin{itemize}
-    \item If defeated, the Hero does not have to pay their opponent gold, nor do they gain \svg{morale_negative}.
+    \item If defeated, the Hero does not have to pay their opponent 10 \svg{gold}, nor do they gain \svg{morale_negative}.
   \end{itemize}
   \item If held by a Secondary Hero:
   \begin{itemize}
     \item If defeated, the Hero is moved to the Town instead of being removed.
-    \item The Hero can use their M\&M Deck during combat.
+    \item The Hero can use your M\&M Deck during combat.
   \end{itemize}
 \end{itemize}
 
