Get rid of passive voice

--- a/draft-scenarios/clash/secret_bomb_stash.tex
+++ b/draft-scenarios/clash/secret_bomb_stash.tex
@@ -119,7 +119,7 @@ During this Scenario:
 
 \begin{itemize}
   \item When first flagged, the Hero gains +1 \svgeven{movement}.
-  \item On each visit (including the first), the player can choose to either:
+  \item On each visit (including the first), you can choose to either:
   \begin{itemize}
     \item Move the visiting Hero to any other Obelisk already flagged by you (if that Obelisk is occupied by another Hero, your Hero cannot move there).
     \item If the Hero carries the bomb, transfer the bomb to your other Hero (or any allied Heroes).
