--- a/draft-scenarios/clash/secret_bomb_stash.tex
+++ b/draft-scenarios/clash/secret_bomb_stash.tex
@@ -1,5 +1,5 @@
 % !TeX spellcheck = en_US
-\addscenariosection{1}{Clash Scenario}{Secret Bomb Stash}{\images/secret-bomb-stash.png}
+\addscenariosection{1}{Clash Scenario}{Secret Bomb Stash}{\images/implosion.png}
 
 \begin{multicols}{2}
 
