--- a/clash/dragoncurse_castle.tex
+++ b/clash/dragoncurse_castle.tex
@@ -27,7 +27,7 @@ This Scenario is played over a maximum of 11 Rounds.
 
 \textbf{Starting Units:}
 \begin{itemize}
-  \item 2 × A Pack \svgunit{bronze} Units with the lowest Recruitment cost
+  \item 2 × A Few \svgunit{bronze} Units with the lowest Recruitment cost
 \end{itemize}
 
 \textbf{Town Buildings:} \svgunit{bronze} Dwelling
