--- a/draft-scenarios/clash/arcane_artillery.tex
+++ b/draft-scenarios/clash/arcane_artillery.tex
@@ -22,7 +22,7 @@ This Scenario is played over 12 Rounds.
 
 \textbf{Starting Units:}
 \begin{itemize}
-  \item a Few of each \svgunit{bronze} Unit
+  \item A Few of each \svgunit{bronze} Unit
 \end{itemize}
 
 \textbf{Town Buildings:} \svgunit{bronze} Dwelling
