--- a/draft-scenarios/clash/secret_bomb_stash.tex
+++ b/draft-scenarios/clash/secret_bomb_stash.tex
@@ -23,7 +23,7 @@ This Scenario is played over 8 Rounds, with up to 4 additional tie-breaking Roun
 
 \textbf{Starting Units:}
 \begin{itemize}
-  \item A Few of two \svgunit{bronze} Units with the lowest Recruitment cost
+  \item 2 × A Few \svgunit{bronze} Units with the lowest Recruitment cost
   \item A Few \svgunit{silver} Units with the lowest Recruitment cost
 \end{itemize}
 
