--- a/clash/dragoncurse_castle.tex
+++ b/clash/dragoncurse_castle.tex
@@ -67,7 +67,7 @@ However, if the Random Town is first captured in the \nth{10} Round, the game pr
 \subsection*{\MakeUppercase{Additional Rules}}
 During this Scenario:
 \begin{itemize}
-  \item Whenever an Obelisk is Visited for the first time, the Visiting player gains 2 \svg{building_materials}
+  \item Whenever an Obelisk is Visited for the first time, the Visiting player rolls 2 \svg{resource} and resolves both results.
   \item The Random Town is defended by Walls and a Gate when owned by a player, but it only has an Arrow Tower if that player already has a Citadel.
   \item Like any other Town, when the Random Town is owned by a player, it is a valid location for that player to:
     \begin{itemize}
