--- a/translations/dragoncurse_castle.tex/fr.po
+++ b/translations/dragoncurse_castle.tex/fr.po
@@ -6,7 +6,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: Homm 3BG-mission-book\n"
-"POT-Creation-Date: 2024-10-17 18:34+0200\n"
+"POT-Creation-Date: 2024-10-17 21:50+0200\n"
 "PO-Revision-Date: 2024-07-31 22:11+0200\n"
 "Last-Translator: Automatically generated\n"
 "Language-Team: none\n"
@@ -237,7 +237,7 @@ msgid ""
 "\\subsection*{\\MakeUppercase{Additional Rules}}\n"
 "During this Scenario:\n"
 "\\begin{itemize}\n"
-"  \\item Whenever an Obelisk is Visited for the first time, the Visiting player gains 2 \\svg{building_materials}\n"
+"  \\item Whenever an Obelisk is Visited for the first time, the Visiting player rolls 2 \\svg{resource} and resolves both results.\n"
 "  \\item The Random Town is defended by Walls and a Gate when owned by a player, but it only has an Arrow Tower if that player already has a Citadel.\n"
 "  \\item Like any other Town, when the Random Town is owned by a player, it is a valid location for that player to:\n"
 "    \\begin{itemize}\n"
