--- a/clash/dragoncurse_castle.tex
+++ b/clash/dragoncurse_castle.tex
@@ -1,5 +1,5 @@
 % !TeX spellcheck = en_US
-\addscenariosection{1}{Clash Scenario}{Dragoncurse Castle}{\images/frenzy.png}
+\addscenariosection{1}{Clash Scenario}{Dragoncurse Castle}{\images/town_portal.png}
 
 \begin{multicols*}{2}
 
