--- a/clash/dragoncurse_castle.tex
+++ b/clash/dragoncurse_castle.tex
@@ -1,5 +1,5 @@
 % !TeX spellcheck = en_US
-\addscenariosection{1}{Clash Scenario}{Dragoncurse Castle}{\images/frenzy.png}
+\addscenariosection{1}{Clash Scenario}{Dragoncurse Castle}{\images/town_portal.png}
 
 \begin{multicols*}{2}
 
@@ -27,7 +27,7 @@ This Scenario is played over a maximum of 11 Rounds.
 
 \textbf{Starting Units:}
 \begin{itemize}
-  \item 2 × A Pack \svgunit{bronze} Units with the lowest Recruitment cost
+  \item 2 × A Few \svgunit{bronze} Units with the lowest Recruitment cost
 \end{itemize}
 
 \textbf{Town Buildings:} \svgunit{bronze} Dwelling
@@ -67,7 +67,7 @@ However, if the Random Town is first captured in the \nth{10} Round, the game pr
 \subsection*{\MakeUppercase{Additional Rules}}
 During this Scenario:
 \begin{itemize}
-  \item Whenever an Obelisk is Visited for the first time, the Visiting player gains 2 \svg{building_materials}
+  \item Whenever an Obelisk is Visited for the first time, the Visiting player rolls 2 \svg{resource} and resolves both results.
   \item The Random Town is defended by Walls and a Gate when owned by a player, but it only has an Arrow Tower if that player already has a Citadel.
   \item Like any other Town, when the Random Town is owned by a player, it is a valid location for that player to:
     \begin{itemize}
