Introduce separation in draft scenarios

--- a/draft-scenarios/campaigns/castle_sicilian_dragon.tex
+++ b/draft-scenarios/campaigns/castle_sicilian_dragon.tex
@@ -7,7 +7,7 @@
 
 \textbf{Source:} \href{https://travelledtales.com}{travelledtales.com}
 
-\textit{Convinced that the only way to save Steadwick is to attack Vhidhax, Catherine powers her small force ahead. 
+\textit{Convinced that the only way to save Steadwick is to attack Vhidhax, Catherine powers her small force ahead.
 Following the Archangels to a distant, inhospitable land, she must now navigate her way through.}
 
 \subsection*{\MakeUppercase{Scenario length}}
@@ -134,13 +134,15 @@ During this Castle campaign Scenario, the following rules apply:
 \columnbreak
 
 \begin{itemize}
-\item All neutral enemies fight using the Neutral Enemy Deck
-\item Each time you visit a Trading Post, draw the top Cards from the \svgunit{bronze} bronze, \svgunit{silver} silver, and \svgunit{golden} golden neutral enemy Decks. 
+\item All neutral enemies fight using the Neutral Enemy Deck.
+\item Each time you visit a Trading Post, draw the top Cards from the \svgunit{bronze} bronze, \svgunit{silver} silver, and \svgunit{golden} golden neutral enemy Decks.
 You may recruit any, or all of them by paying their cost.
-Shuffle any un-hired ones back into their Decks
+Shuffle any un-hired ones back into their Decks.
+
 \item The Grail may be sold at a trading post for 30 \svgunit{gold} \textit{or} \textbf{Search (3)} the relic Deck, twice.
-\item When fighting the enemy at thier Town, they have a Citadel
-Don't forget to add the walls and arrow tower to make the battle a siege
+
+\item When fighting the enemy at thier Town, they have a Citadel.
+Don't forget to add the walls and arrow tower to make the battle a siege.
 \end{itemize}
 
 \end{multicols}
