--- a/draft-scenarios/campaigns/castle_two_knights_defense.tex
+++ b/draft-scenarios/campaigns/castle_two_knights_defense.tex
@@ -70,7 +70,7 @@ Take the following Map Tiles and arrange them as shown in the Scenario map layou
 
 Place your Castle Hero on the center Field of the Necropolis start Tile S1.
 
-Place a Necropolis Hero on the bottom left Field of the leftmost Far Tile. 
+Place a Necropolis Hero on the bottom left Field of the leftmost Far Tile.
 Reveal the Tile when the game begins.
 
 \subsection*{\MakeUppercase{Victory Conditions}}
@@ -108,13 +108,14 @@ Reveal the Tile when the game begins.
 During this Castle campaign Scenario, the following rules apply:
 
 \begin{itemize}
-  \item The Glory of Erathia building is unavailable
+  \item The Glory of Erathia building is unavailable.
   \item Each time you visit a Trading Post, draw the top Cards from the \svgunit{bronze} bronze, \svgunit{silver} silver, and \svgunit{golden} golden neutral enemy Decks.
   You may recruit any, or all of them by paying their cost.
-  Shuffle any un-hired ones back into their Decks
-  \item After defeating the neutral army at the Dragon Utopia, add a random dragon from the \svgunit{azure} Azure neutral Deck to your army
-  \item The enemy army follows the normal AI movement rules, stopping to capture Settlements and Mines, with its ultimate goal to reach the Dragon Utopia
-  \item If the enemy army reaches the Dragon Utopia before you do, flip the Pack side of Dread Knights to Few and add a Pack of Ghost Dragons
+  Shuffle any un-hired ones back into their Decks.
+
+  \item After defeating the neutral army at the Dragon Utopia, add a random dragon from the \svgunit{azure} Azure neutral Deck to your army.
+  \item The enemy army follows the normal AI movement rules, stopping to capture Settlements and Mines, with its ultimate goal to reach the Dragon Utopia.
+  \item If the enemy army reaches the Dragon Utopia before you do, flip the Pack side of Dread Knights to Few and add a Pack of Ghost Dragons.
 \end{itemize}
 
 \begin{tikzpicture}[overlay]
@@ -150,7 +151,7 @@ But if he did… If she missed something, he would have newfound strength enough
 She clenched her fist, crushing the frail paper to dust before rushing to the doorway to gather who she could.
 
 To her surprise, the necropolis' courtyard was abuzz with energy.
-She placed her hands on the overlook's railing and peered over the edge to spy a host of knights in the color and flair of various baronies. 
+She placed her hands on the overlook's railing and peered over the edge to spy a host of knights in the color and flair of various baronies.
 
 Rion came rushing up to her a moment later, intent on delivering news of their new guests.
 ``Queen Catherine!'' he said excitedly.
@@ -202,7 +203,7 @@ A strange, deep calling swelled within Catherine.
 She turned her focus to the majestic Dragon Utopia, with its rust-colored walls and pointed turrets.
 It was an odd place for dragons to call home, yet its sheer presence was undeniable.
 
-Catherine approached slowly, with the remains of her battered forces following cautiously. 
+Catherine approached slowly, with the remains of her battered forces following cautiously.
 Reaching the foot of the fortress, it was only a moment before the majestic snout of an azure dragon crawled into view from the large, curved, open entry to the stony fortress.
 The rest of the creature soon followed, and with a stretch of wings, it stared down at the human queen.
 While many fell to their knees, Catherine looked up to meet the dragon's gaze, and the two shared a moment of understanding between royalty.
