--- a/main_de.tex
+++ b/main_de.tex
@@ -1,4 +1,5 @@
-% !TeX spellcheck = en_US
+% !TeX program = lualatex
+% !TeX spellcheck = de
 \documentclass[12pt]{article}
 
 % Language setting
@@ -27,4 +28,4 @@
 
 \title{\includegraphics[width=6cm]{\images/title.png}\\Fan-Erstelltes Missionsheft}
 
-By The Community\input{metadata.tex}
+\input{metadata.tex}
