Weblate/update translations (#136)
Co-authored-by: krazanas <krazi321@gmail.com>
Co-authored-by: Karol Werner <karol@ppkt.eu>
Co-authored-by: github-actions <github-actions@github.com>

--- a/translations/inferno_devilish_plan.tex/pl.po
+++ b/translations/inferno_devilish_plan.tex/pl.po
@@ -7,7 +7,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: Homm 3BG-mission-book\n"
 "POT-Creation-Date: 2024-10-22 22:57+0200\n"
-"PO-Revision-Date: 2024-10-29 15:06+0000\n"
+"PO-Revision-Date: 2024-10-29 23:06+0000\n"
 "Last-Translator: krazanas <krazi321@gmail.com>\n"
 "Language-Team: Polish <https://hosted.weblate.org/projects/homm3bg-fan-made-"
 "mission-book/campaigns/inferno_devilish_plan/pl/>\n"
@@ -672,6 +672,10 @@ msgid ""
 "\\vspace*{\\fill}\n"
 "\n"
 msgstr ""
+"\\vspace*{\\fill}\n"
+"\\includegraphics[width=\\linewidth, keepaspectratio]{\\art/slayer.png}\n"
+"\\vspace*{\\fill}\n"
+"\n"
 
 #. type: tikzpicture
 #: campaigns/inferno_devilish_plan.tex:177
