--- a/translations/dragoncurse_castle.tex/pl.po
+++ b/translations/dragoncurse_castle.tex/pl.po
@@ -7,7 +7,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: Homm 3BG-mission-book\n"
 "POT-Creation-Date: 2024-10-22 22:59+0200\n"
-"PO-Revision-Date: 2024-10-29 15:06+0000\n"
+"PO-Revision-Date: 2024-10-29 23:06+0000\n"
 "Last-Translator: krazanas <krazi321@gmail.com>\n"
 "Language-Team: Polish <https://hosted.weblate.org/projects/homm3bg-fan-made-"
 "mission-book/clash-scenarios/dragoncurse_castle/pl/>\n"
@@ -96,6 +96,8 @@ msgid ""
 "\\columnbreak\n"
 "\n"
 msgstr ""
+"\\columnbreak\n"
+"\n"
 
 #. type: multicols*
 #: coops/titans_stronghold.tex:37 clash/dragoncurse_castle.tex:36
@@ -344,6 +346,13 @@ msgid ""
 "\\vfill\n"
 "\\phantom{.}"
 msgstr ""
+"\\phantom{.}\n"
+"\\vfill\n"
+"\\begin{center}\n"
+"  \\transparent{0.3}{\\includegraphics[width=\\linewidth, keepaspectratio]{\\images/earthquake.png}}\n"
+"\\end{center}\n"
+"\\vfill\n"
+"\\phantom{.}"
 
 #. type: tikzpicture
 #: clash/dragoncurse_castle.tex:97
