--- a/translations/inferno_deal_with_the_devil.tex/pl.po
+++ b/translations/inferno_deal_with_the_devil.tex/pl.po
@@ -8,7 +8,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: Homm 3BG-mission-book\n"
 "POT-Creation-Date: 2024-10-22 22:57+0200\n"
-"PO-Revision-Date: 2024-10-29 15:06+0000\n"
+"PO-Revision-Date: 2024-10-29 23:06+0000\n"
 "Last-Translator: krazanas <krazi321@gmail.com>\n"
 "Language-Team: Polish <https://hosted.weblate.org/projects/homm3bg-fan-made-"
 "mission-book/campaigns/inferno_deal_with_the_devil/pl/>\n"
@@ -794,6 +794,10 @@ msgid ""
 "\\vspace*{\\fill}\n"
 "\n"
 msgstr ""
+"\\vspace*{\\fill}\n"
+"\\includegraphics[width=\\linewidth, keepaspectratio]{\\art/cerberi.png}\n"
+"\\vspace*{\\fill}\n"
+"\n"
 
 #. type: tikzpicture
 #: campaigns/inferno_deal_with_the_devil.tex:212
@@ -808,6 +812,14 @@ msgid ""
 "  };\n"
 "\n"
 msgstr ""
+"[remember picture, overlay]\n"
+"  \\node(bg)[anchor=center, yshift=37em, opacity=0.17] at (current page.south) {\n"
+"    \\includegraphics[width=0.85\\paperwidth, keepaspectratio]{\\art/inferno.png}\n"
+"  };\n"
+"  \\node(map)[anchor=center] at (current page.center) {\n"
+"    \\includegraphics[width=\\textwidth]{\\maps/inferno_deal_with_the_devil.png}\n"
+"  };\n"
+"\n"
 
 #. type: tikzpicture
 #: campaigns/inferno_deal_with_the_devil.tex:226
@@ -826,3 +838,15 @@ msgid ""
 "  \\node at (0.1, -13.3) {\\large{{\\textbf{\\textcolor{darkcandyapplered}{F3}}}}};\n"
 "  \\node at (4.3, -10.3) {\\large{{\\textbf{\\textcolor{darkcandyapplered}{F6}}}}};"
 msgstr ""
+"  \\node at (1.5, -6) {\\large{{\\textbf{\\textcolor{darkcandyapplered}{S4}}}}};\n"
+"  \\node at (7, -6) {\\large{{\\textbf{\\textcolor{darkcandyapplered}{\\#F4}}}}};\n"
+"  \\node at (12.6, -8.4) {\\large{{\\textbf{\\textcolor{darkcandyapplered}{F17}}}}};\n"
+"  \\node at (15, -9.5) {\\large{{\\textbf{\\textcolor{darkcandyapplered}{Kleesive}}}}};\n"
+"  \\node at (15, -10.3) {\\large{{\\textbf{\\textcolor{darkcandyapplered}{S6}}}}};\n"
+"  \\node at (15.9, -16.8) {\\large{{\\textbf{\\textcolor{darkcandyapplered}{N12}}}}};\n"
+"  \\node at (12.4, -18) {\\large{{\\textbf{\\textcolor{darkcandyapplered}{F16}}}}};\n"
+"  \\node at (9.3, -15.6) {\\large{{\\textbf{\\textcolor{darkcandyapplered}{F18}}}}};\n"
+"  \\node at (6, -18) {\\large{{\\textbf{\\textcolor{darkcandyapplered}{F12}}}}};\n"
+"  \\node at (2, -19) {\\large{{\\textbf{\\textcolor{darkcandyapplered}{S3}}}}};\n"
+"  \\node at (0.1, -13.3) {\\large{{\\textbf{\\textcolor{darkcandyapplered}{F3}}}}};\n"
+"  \\node at (4.3, -10.3) {\\large{{\\textbf{\\textcolor{darkcandyapplered}{F6}}}}};"
