--- a/translations/recommendations.tex/pl.po
+++ b/translations/recommendations.tex/pl.po
@@ -7,7 +7,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: Homm 3BG-mission-book\n"
 "POT-Creation-Date: 2024-10-22 22:57+0200\n"
-"PO-Revision-Date: 2024-10-29 15:06+0000\n"
+"PO-Revision-Date: 2024-10-29 23:06+0000\n"
 "Last-Translator: krazanas <krazi321@gmail.com>\n"
 "Language-Team: Polish <https://hosted.weblate.org/projects/homm3bg-fan-made-"
 "mission-book/sections/recommendations/pl/>\n"
@@ -198,6 +198,8 @@ msgid ""
 "\\includegraphics[width=\\linewidth]{\\art/medusa.jpg}\n"
 "\n"
 msgstr ""
+"\\includegraphics[width=\\linewidth]{\\art/medusa.jpg}\n"
+"\n"
 
 #. type: multicols*
 #: sections/recommendations.tex:45
@@ -250,6 +252,10 @@ msgid ""
 "\\end{center}\n"
 "\n"
 msgstr ""
+"\\begin{center}\n"
+"  \\transparent{0.3}{\\includegraphics[width=\\linewidth]{\\art/black_market.png}}\n"
+"\\end{center}\n"
+"\n"
 
 #. type: multicols*
 #: sections/recommendations.tex:58
@@ -344,6 +350,10 @@ msgid ""
 "\\end{center}\n"
 "\n"
 msgstr ""
+"\\begin{center}\n"
+"  \\includegraphics[width=0.65\\linewidth]{\\art/resurrection.png}\n"
+"\\end{center}\n"
+"\n"
 
 #. type: figure*
 #: sections/recommendations.tex:106
@@ -472,3 +482,7 @@ msgid ""
 "\\end{center}\n"
 "\n"
 msgstr ""
+"\\begin{center}\n"
+"  \\includegraphics[width=0.7\\linewidth]{\\art/coin.png}\n"
+"\\end{center}\n"
+"\n"
