--- a/translations/title_page.tex/pl.po
+++ b/translations/title_page.tex/pl.po
@@ -6,16 +6,18 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: Homm 3BG-mission-book\n"
-"POT-Creation-Date: 2024-07-03 17:01+0200\n"
-"PO-Revision-Date: 2024-06-29 16:10+0200\n"
-"Last-Translator: Automatically generated\n"
-"Language-Team: none\n"
+"POT-Creation-Date: 2024-10-22 22:57+0200\n"
+"PO-Revision-Date: 2024-10-29 23:05+0000\n"
+"Last-Translator: krazanas <krazi321@gmail.com>\n"
+"Language-Team: Polish <https://hosted.weblate.org/projects/homm3bg-fan-made-"
+"mission-book/sections/scenarios/pl/>\n"
 "Language: pl\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=3; plural=(n==1 ? 0 : n%10>=2 && n%10<=4 && (n%100<10 "
 "|| n%100>=20) ? 1 : 2);\n"
+"X-Generator: Weblate 5.8.2-dev\n"
 
 #.  !TeX spellcheck = en_US
 #. type: tikzpicture
@@ -61,3 +63,11 @@ msgid ""
 "{\\svgs/attack_yellow.svg} \\includesvg[height=0.1px]{\\svgs/defense_yellow."
 "svg} \\includesvg[height=0.1px]{\\svgs/damage-table.svg} }"
 msgstr ""
+"\\phantom{ \\includesvg[height=0.1px]{\\svgs/bronze.svg} "
+"\\includesvg[height=0.1px]{\\svgs/bronze.svg} \\includesvg[height=0.1px]"
+"{\\svgs/silver.svg} \\includesvg[height=0.1px]{\\svgs/golden.svg} "
+"\\includesvg[height=0.1px]{\\svgs/azure.svg} \\includesvg[height=0.1px]"
+"{\\svgs/gold.svg} \\includesvg[height=0.1px]{\\svgs/building_materials.svg} "
+"\\includesvg[height=0.1px]{\\svgs/valuables.svg} \\includesvg[height=0.1px]"
+"{\\svgs/attack_yellow.svg} \\includesvg[height=0.1px]{\\svgs/defense_yellow."
+"svg} \\includesvg[height=0.1px]{\\svgs/damage-table.svg} }"
